--- a/.github/workflows/ansible-ci.yml
+++ b/.github/workflows/ansible-ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install molecule[docker] ansible  # or specific Ansible version
+          pip install docker 'molecule[docker]' ansible  # or specific Ansible version
 
       - name: Run Molecule Test for each role
         run: |
