--- a/.github/workflows/ansible-ci.yml
+++ b/.github/workflows/ansible-ci.yml
@@ -26,12 +26,22 @@ jobs:
         with:
           python-version: 3.11 #${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker.io
+          sudo apt-get remove -y docker docker-engine docker.io containerd runc
+          sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           sudo systemctl start docker
-          sudo systemctl enable docker
+          sudo systemctl enable docker    
+
+
+      - name: Install dependencies
+        run: |
+          
           python -m pip install --upgrade pip
           pip install docker 'molecule[docker]' ansible  # or specific Ansible version
 
