--- a/.github/workflows/ansible-ci.yml
+++ b/.github/workflows/ansible-ci.yml
@@ -36,7 +36,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           sudo systemctl start docker
-          sudo systemctl enable docker    
+          sudo systemctl enable docker
+          sudo usermod -aG docker $USER
+          sudo chmod 666 /var/run/docker.sock
+
+      - name: Verify Docker installation
+        run: docker --version
 
 
       - name: Install dependencies
