--- a/.github/workflows/ansible-ci.yml
+++ b/.github/workflows/ansible-ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           
           python -m pip install --upgrade pip
-          pip install docker 'molecule[docker]' ansible  # or specific Ansible version
+          pip install 'molecule-plugins[docker]' ansible  # or specific Ansible version
 
       - name: Run Molecule Test for each role
         run: |
