added namespace and role_name

--- a/gis/laptop/playbooks/roles/cargo/meta/main.yml
+++ b/gis/laptop/playbooks/roles/cargo/meta/main.yml
@@ -20,5 +20,8 @@ galaxy_info:
     - rust
     - rustup
 
+  namespace: adorsys  
+  role_name: cargo  
+
 dependencies:
   - name: gis.laptop.common
